--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+}
+
+html,body, .full{
+    height: 100%;
+}
+
+.top60{
+    margin-top: 60px;
+}
+
+.top30{
+    margin-top: 30px;
+}
+
+h1{
+    font-family: 'Permanent Marker', cursive;
+}
